fixed layout issues

--- a/frontend/src/app/shared/layout/layout.component.css
+++ b/frontend/src/app/shared/layout/layout.component.css
@@ -56,7 +56,7 @@
 .sidenav {
   width: 260px;
   border-right: 1px solid rgba(0, 0, 0, 0.12);
-
+  border-radius: 0px;
   mat-nav-list {
     padding-top: 16px;
 
@@ -105,7 +105,6 @@
 
 .content-wrapper {
   padding: 24px;
-  min-height: 100%;
 }
 
 @media (max-width: 960px) {
